--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "node-sass": "^4.9.4",
+    "react-router-dom": "^4.3.1",
+    "sass-loader": "^7.1.0"
+  }
 }
